# dme_hu

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  testnotebook.ipynb
app/: Project_Introduction.py  dashboard_utils.py  shared_code.py  streamlit_app.py
app/pages/: 1_Bevolkingsgroei_Nederland.py  1_Nederland.py  2_Bevolkingsgroei_Gemeentes.py  2_Gemeentes.py  3_Bevolkingsgroei_vs_Bodemgebruik.py  4_Voorspellen_Bevolkingsgroei  4_Voorspellen_Bevolkingsgroei.py
backend/: config.py  crud.py  db_tools.py  models.py  utils.py
backend/ml_models/: DecisionTreeRegressor.joblib  KernelRidgeRegression.joblib  LinearRegression.joblib  SVM.joblib
data/sql/: db_init.sql
notebook/: testnotebook.ipynb
src/: config.py  crud.py  db_tools.py  main.py  models.py  streamlit_app.py  utils.py
src/backend/: crud.py  utils.py
tests/: conftest.py  db_init.sql  test_api.py  test_apicall.py  test_db.py
tests/test_data/: burgstaat.xml
