[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Max Pot", email = "max.pot@hotmail.com"},
    {name = "BAMPROD\\max.pot", email = "max.pot@bam.com"},
]
dependencies = [
    "polars>=0.19.3",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.20",
    "loguru>=0.7.2",
    "pydantic-settings>=2.0.3",
    "streamlit>=1.26.0",
    "tqdm>=4.66.1",
    "seaborn>=0.13.0",
    "click>=8.1.7",
    "scikit-learn>=1.3.1",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-mock>=3.12.0",
    "testcontainers>=3.7.1",
]
linting = [
    "ruff>=0.0.290",
    "black>=23.9.1",
]
kernel = [
    "ipykernel>=6.25.2",
]
document = [
    "nbformat>=5.9.2",
    "nbclient>=0.8.0",
]

[tool.ruff]
ignore = [
  "E402",
  "E501",
]
